# blindsign

./: .pre-commit-config.yaml  README.md  pyproject.toml
diy-app/blindsign/: __init__.py  app.py  converter.py  serializer.py
src/blindsign/: __init__.py  __main__.py  converter.py  serializer.py
tests/: test_psbt2msg.py
